# marketplace

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt  test_s3.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
marketplace/: settings.py  urls.py
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_address_order_payment_method_order_phone.py
orders/templates/orders/: cart.html  create_order.html
orders/templates/orders/partials/: cart_count.html  cart_table.html
orders/templatetags/: cart_extras.py  cart_tags.py
products/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_productreview.py  0003_product_image.py
products/templates/: product_form.html
products/templates/products/: product_form.html  product_list.html
static/css/: base.css  cart.css  products.css  profile.css
templates/: base.html  home.html
templates/orders/: create_order.html  order_detail.html
templates/products/: category_form.html  product_detail.html  product_list.html  products_grid_partial.html
templates/products/partials/: product_list_items.html  serach_results.html  sort_control.html
templates/users/: auth.html
users/: apps.py  forms.py  mixins.py  models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_sellerreview.py  0003_sellerprofile.py
users/templates/users/: profile.html  profile_edit.html  seller_profile.html  seller_profile_form.html
users/views/: __init__.py  auth.py  profile.py  seller.py
